# 5DataGlowUp

./: .gitignore  404.html  README.ipynb  README.md  index.html  mkdocs.yml  pyproject.toml
dashboard/: index.html
docs/: dashboard.md  eda.md  index.md
eda/: index.html
search/: search_index.json
src/eda/: AirBnB.ipynb
src/pipeline/: extract.py  load.py  main.py  transform.py
