[tool.poetry]
name = "airbnb data"
version = "0.1.0"
description = "Desafio de montar um DataViz através de dados da Airbnb"
authors = ["Wesley Pinheiro da Silva <wpsilva.contato@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = { version = "^1.26.1", python = ">=3.11,<3.13" }
pandas = "^2.1.2"
seaborn = "^0.13.0"
ruff = "^0.1.3"
forex-python = "^1.8"
pydocstyle = "^6.3.0"
taskipy = "^1.12.0"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.7.4"
pygments = "^2.17.1"
mkdocs-material = "^9.4.10"
pymdown-extensions = "^10.4"
mkdocs-bootstrap386 = "^0.0.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest -v"
format = "ruff format . && isort ."